# mno-clients

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
src/: app.py  controller.py  model.py  view.py
src/database/: __init__.py  init.sql  models.py  session.py
